# wavelet-networks

./: CMakeLists.txt  README.md
data/: prediction_sinus.data
src/: Matrix.cpp  Matrix.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  WaveletFunction.cpp  WaveletFunction.h  WaveletNetwork.cpp  WaveletNetwork.h  Wavelon.cpp  Wavelon.h  main.cpp
